[package]
name = "ipfs-server"
version = "0.1.4"
edition = "2021"
description = """
Simple ipfs server built on rust-ipfs
"""
rust-version = "1.67"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/ipfs-server"
authors = ["Darius Clark"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ipfs = "0.3.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
zeroize = "1"
base64 = "0.21"
